<resources>
    <string name="app_name">ComputerOrder</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="next">next</string>
    <string name="graphic_card">Graphic card</string>
    <string name="operation_system">Operation system</string>
    <string name="monitor">Monitor</string>
    <string name="keyboard">KeyBoard</string>
    <string name="mouse">Mouse</string>
    <string name="web_cam">Web cam</string>
    <string name="user">User:</string>
    <string name="order">Order</string>
    <string name="operation_system2">Operation system:</string>
    <string name="graphic_card2">Graphic cards:</string>
    <string name="monitor2">Monitors:</string>
    <string name="accessory">Accessory:</string>
    <string name="item">Item</string>
    <string name="input_amount_of_graphic_cards">Input amount of graphic cards:</string>
    <string name="input">input</string>
    <string name="input_amount_of_monitors">Input amount of monitors:</string>
    <string name="input_graphic_cards">Input Graphic Cards:</string>
    <string name="input_monitors">Input monitors</string>
    <string name="change">Change</string>
</resources>